[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
package = ["src/gravlax"]

[project]
name = "gravlax"
version = "0.0.1"
description = "Basic training utils for JAX."

authors = [
    { name = "Daniel Kelshaw", email = "djk21@ic.ac.uk" }
]

license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

dependencies = [
    "hatch",
    "jax",
    "jaxlib",
]

[project.optional-dependencies]
jupyter = [
    "ipykernel",
    "jupyterlab",
]

dev = [
    "pip-tools",
    "ruff",
    "pyright",
    "pytest",
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]

[project.urls]
repository = "https://github.com/magrilab/gravlax"

[tool.ruff]
select = [
    "E", # pycodestyle::errors
    "W", # pycodestyle::warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "N", # pep8-naming
]

ignore = ["E501"]

line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
include = ["./src"]
pythonVersion = "3.10"
venvPath = "."
venv = "venv"
useLibraryCodeForTypes = true
reportMissingImports = true

[tool.hatch.metadata]
allow-direct-references = true
